NetBSD Problem Report #55824

From jschauma@netmeister.org  Thu Nov 26 01:47:02 2020
Return-Path: <jschauma@netmeister.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 506C61A9217
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 26 Nov 2020 01:47:02 +0000 (UTC)
Message-Id: <20201126014658.82ED9859EA@panix.netmeister.org>
Date: Wed, 25 Nov 2020 20:46:58 -0500 (EST)
From: jschauma@netmeister.org
Reply-To: jschauma@netmeister.org
To: gnats-bugs@NetBSD.org
Subject: missing \n in tunefs(8)
X-Send-Pr-Version: 3.95

>Number:         55824
>Category:       misc
>Synopsis:       tunefs(8) is missing a \n when using '-p'
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 26 01:50:00 +0000 2020
>Closed-Date:    Thu Nov 26 02:18:09 +0000 2020
>Last-Modified:  Thu Nov 26 02:18:09 +0000 2020
>Originator:     Jan Schaumann
>Release:        NetBSD 9.99.76
>Organization:

>Environment:


Architecture: x86_64
Machine: amd64
>Description:

	When enabling POSIX ACLs via tunefs(8), the output is missing a trailing
	'\n':

	# tunefs -p enable /dev/wd1a
	tunefs: tuning /dev/rwd1a
	POSIX1e ACLs set#


>How-To-Repeat:
	# tunefs -p enable /dev/wd1a
>Fix:

Index: tunefs.c
===================================================================
RCS file: /cvsroot/src/sbin/tunefs/tunefs.c,v
retrieving revision 1.53
diff -u -r1.53 tunefs.c
--- tunefs.c	8 Aug 2020 11:44:55 -0000	1.53
+++ tunefs.c	26 Nov 2020 01:44:48 -0000
@@ -391,7 +391,7 @@
 				    "exclusive", name);
 			} else {
 				sblock.fs_flags |= FS_POSIX1EACLS;
-				printf("%s set", name);
+				printf("%s set\n", name);
 			}
 		} else if (strcmp(pvalue, "disable") == 0) {
 			if ((~sblock.fs_flags & FS_POSIX1EACLS) ==
@@ -400,7 +400,7 @@
 				    name);
 			} else {
 				sblock.fs_flags &= ~FS_POSIX1EACLS;
-				printf("%s cleared", name);
+				printf("%s cleared\n", name);
 			}
 		}
 	}

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55824 CVS commit: src/sbin/tunefs
Date: Thu, 26 Nov 2020 02:06:01 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Thu Nov 26 02:06:01 UTC 2020

 Modified Files:
 	src/sbin/tunefs: tunefs.c

 Log Message:
 Add missing newlines to ACL prints in tunefs; from Jan Schaumann in PR 55824.


 To generate a diff of this commit:
 cvs rdiff -u -r1.53 -r1.54 src/sbin/tunefs/tunefs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 26 Nov 2020 02:18:09 +0000
State-Changed-Why:
committed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.