Add missing newlines to ACL prints in tunefs; from Jan Schaumann in PR 55824.